--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pickle-mixin>=1.0.2
 xlrd>=2.0.1
 openpyxl>=3.1.0
 pandas>=1.5.0
-numpy>=1.23.0
+numpy==1.23
 scipy>=1.9.0
 matplotlib>=3.6.0
 seaborn==0.10.1
